# All-about-the-Hotel

./: .env.example  .gitignore  README.md  [参考]Layer1的接口预期形式与实现方式.md  [参考]期末项目指导意见.md  clustering_categories.ipynb  configure.py  demo.html  demo.py  install.py  pyproject.toml  requirements.txt  setup.py  关键提示词——苏俊儒.md  关键提示词——董依心.md  技术报告.md  项目设计方案.html
agentic_rag_sft/: README.md  agentic_rag.py  build_sft_dataset.py  cli.py  interfaces.py  run_demo.py  train_sft_lora.py
data/chromadb_cn/: chroma.sqlite3
data/finetuned/: config.json  finetune_report.json  processor_config.json  projection_heads.pt  tokenizer_config.json
data/openvino/: text_encoder.xml  vision_encoder.xml
data/sft/: sft_preview.json  sft_train.jsonl  sft_val.jsonl
data/split/: test_ids.json  train_ids.json
dyx/: .gitignore  exp3-syh.ipynb  lib.py
engine/: __init__.py  multimodal.py
hotel/: __init__.py  __main__.py  demo.py
hotel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
refs/: Layer2的接口预期形式与实现方式.md
scripts/_shared/: __init__.py  bm25.py  cache.py  clusters.py  data.py  fusion.py  llm.py  retriever.py  router.py  store.py  text.py
scripts/advisor/: __init__.py  agent.py  recognizer.py  scenes.py  synthesizer.py
scripts/dyx/: Database.ipynb  README.md  __init__.py  api.py  build.py  clustering.py  engine.py
scripts/leuca/: README.md
scripts/yuhao/: README.md
setup/: __init__.py  __main__.py  check.py  gpu.py  index.py  model.py  verify.py
src/: multimodal.py
tests/: run_all.py
vibecoding/: README.md  __init__.py  analysis_report.md
(+49 files in other folders)
